# bit_magic

./: CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt  main.cpp
include/bit_magic/: magic.hpp  print.hpp  types.hpp  util.hpp
src/: bit_magic.cpp  util.cpp
src/print/: print_binary_algorithms.cpp  print_binary_operators.cpp  print_util_functions.cpp
src/private_include/: util.hpp
